fix script definition
fhfhfdhfsdhgfhsdfjhsdhdfhgsdghshdgsd

--- a/Incremental_JS/index.html
+++ b/Incremental_JS/index.html
@@ -9,5 +9,5 @@
     <button onclick="powerClick(1)">Click me!</button>
     <span id=click>click</span>
 </body>
-<script> src="main.js" </script>
+<script src="main.js"></script>
 </html>
