--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@ SOFTWARE.-->
     <title>First JS</title>
 </head>
 <body>
-    <button onclick="powerClick(1)">Click me!</button>
-    <br />
-    <span id=click>click</span>
+    <button onclick="powerClick(1)">Click Me!</button>
+	<br />
+	Cookies: <span id="click">0</span>
+	<br />
+	<button onclick="buyCursor()">Buy Cursor</button>
+	<br />
+	Cursors: <span id="cursors">0</span>
+	<br />
+	Cursor Cost: <span id="cursorCost">10</span>
 </body>
 <script src="main.js"></script>
 </html>
