--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ SOFTWARE.-->
 <body>
     <button onclick="powerClick(1)">Click Me!</button>
 	<br />
-	Cookies: <span id="click">0</span>
+	Power: <span id="click">0</span>
 	<br />
 	<button onclick="buyCursor()">Buy Cursor</button>
 	<br />
