--- a/index.html
+++ b/index.html
@@ -37,5 +37,5 @@ SOFTWARE.-->
 	<br />
 	Cursor Cost: <span id="cursorCost">10</span>
 </body>
-<script src="main.js"></script>
+<script type="text/javascript" src="main.js"></script>
 </html>
