--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ SOFTWARE.-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>First JS</title>
+    <title>Power Clicker</title>
 </head>
 <body>
     <button onclick="powerClick(1)">Click Me!</button>
@@ -37,5 +37,5 @@ SOFTWARE.-->
 	<br />
 	Cursor Cost: <span id="cursorCost">10</span>
 </body>
-<script type="text/javascript" src="main.js"></script>
+<script src="main.js"></script>
 </html>
