Replaced Spans with Divs

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@ SOFTWARE.-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Power Clicker</title>
+    <title>Power Clicker Pre-Alpha</title>
 </head>
 <body>
-    <button onclick="powerClick(1)">Click Me!</button>
+    <button onclick="powerClick(1)">Click For +1 Power</button>
 	<br />
-	Power: <span id="click">0</span>
+	<div id="click">Power: 0</div>
 	<br />
 	<button onclick="buyCursor()">Buy Cursor</button>
 	<br />
-	Cursors: <span id="cursors">0</span>
+	<div id="cursors">Cursors: 0</div>
 	<br />
-	Cursor Cost: <span id="cursorCost">10</span>
+	<div id="cursorCost">Cursor Cost: 10</div>
 </body>
 <script src="main.js"></script>
 </html>
