--- a/index.html
+++ b/index.html
@@ -19,23 +19,29 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.-->
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Power Clicker Pre-Alpha</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="styles.css">
+  <title>Power Idle Web[Pre-Alpha]</title>
 </head>
 <body>
-    <button onclick="powerClick(1)">Click For +1 Power</button>
-	<br />
-	<div id="click">Power: 0</div>
-	<br />
-	<button onclick="buyCursor()">Buy Cursor</button>
-	<br />
-	<div id="cursors">Cursors: 0</div>
-	<br />
-	<div id="cursorCost">Cursor Cost: 10</div>
+  <div id="currency">You have $10</div>
+  <div class="generators-container">
+    <div class="generator" id="gen1" onclick="buyGenerator(1)"></div>
+    <div class="generator" id="gen2" onclick="buyGenerator(2)"></div>
+    <div class="generator" id="gen3" onclick="buyGenerator(3)"></div>
+    <div class="generator" id="gen4" onclick="buyGenerator(4)"></div>
+    <div class="generator" id="gen5" onclick="buyGenerator(5)"></div>
+    <div class="generator" id="gen6" onclick="buyGenerator(6)"></div>
+    <div class="generator" id="gen7" onclick="buyGenerator(7)"></div>
+    <div class="generator" id="gen8" onclick="buyGenerator(8)"></div>
+    <div class="generator" id="gen9" onclick="buyGenerator(9)"></div>
+    <div class="generator" id="gen10" onclick="buyGenerator(10)"></div>
+  </div>
 </body>
 <script src="main.js"></script>
 </html>
