--- a/index.html
+++ b/index.html
@@ -43,5 +43,5 @@ SOFTWARE.-->
     <div class="generator" id="gen10" onclick="buyGenerator(10)"></div>
   </div>
 </body>
-<script src="js/main.js"></script>
+<script src="main.js"></script>
 </html>
